2008-09-27  Keishi Hattori  <casey.hattori@gmail.com>

        Fixed a bug in the JS syntax highlighter with multiple line tokens.

        https://bugs.webkit.org/show_bug.cgi?id=21171

        Reviewed by Tim Hatcher.

        * page/inspector/SourceFrame.js:
        (syntaxHighlightJavascriptLine): Initialize previousMatchLength.

2008-09-27  Timothy Hatcher  <timothy@apple.com>

        Change searching in the Profiles panel to not match the
        Self and Total columns when there are no units. The only
        column that is matched for unitless number searches is
        now the Calls column.

        https://bugs.webkit.org/show_bug.cgi?id=21169

        Reviewed by Sam Weinig.

        * page/inspector/ProfileView.js:
        (WebInspector.ProfileView.prototype.performSearch):

2008-09-27  David Hyatt  <hyatt@apple.com>

        Rename boundsGeometry -> boundsRect.  Rename geometryChanged -> frameRectsChanged.

        Reviewed by Sam Weinig

        * platform/ScrollView.h:
        * platform/Widget.h:
        (WebCore::Widget::boundsRect):
        (WebCore::Widget::invalidate):
        (WebCore::Widget::frameRectsChanged):
        * platform/gtk/ScrollViewGtk.cpp:
        (WebCore::ScrollViewScrollbar::frameRectsChanged):
        (WebCore::ScrollView::ScrollViewPrivate::scrollBackingStore):
        (WebCore::ScrollView::setFrameRect):
        (WebCore::ScrollView::updateScrollbars):
        (WebCore::ScrollView::frameRectsChanged):
        * platform/gtk/ScrollbarGtk.cpp:
        (ScrollbarGtk::setFrameRect):
        (ScrollbarGtk::frameRectsChanged):
        * platform/gtk/ScrollbarGtk.h:
        * platform/gtk/WidgetGtk.cpp:
        * platform/qt/ScrollViewQt.cpp:
        (WebCore::ScrollView::ScrollViewPrivate::scrollBackingStore):
        (WebCore::ScrollView::setFrameRect):
        (WebCore::ScrollView::frameRectsChanged):
        (WebCore::ScrollView::updateScrollbars):
        * platform/win/ScrollViewWin.cpp: